--- a/app/src/main/res/layout/menu_adapter.xml
+++ b/app/src/main/res/layout/menu_adapter.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/menu_layout"
     android:layout_width="150dp"
     android:layout_height="150dp"
-    android:padding="5dp"
     android:layout_gravity="center"
     android:layout_margin="15dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="5dp">
 
     <ImageView
         android:id="@+id/icon_imageview"
@@ -16,15 +17,15 @@
         app:srcCompat="@drawable/food" />
 
     <TextView
-        android:layout_marginTop="10dp"
         android:id="@+id/text_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="Uang Makan"
-        android:textStyle="bold"
         android:textAlignment="center"
         android:textColor="@color/textColorBlack"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:textStyle="bold" />
 </LinearLayout>
